css/main.scss
---

---

$sidebar-width: 250px;
$title-offset: 100px;
$header-height: 72px;

/*
 * Available font families:
 *
 * font-family: "Quicksand", sans-serif;
 * font-family: "Montserrat", sans-serif;
 * font-family: "Droid Sans", sans-serif;
 */

html {
  height:100%;
  margin:0;
}

body {
  margin:0;
  min-height:100%;
  height:100%;
  background-color:#ffffff;
  font-family: 'Droid Sans', sans-serif;
  overflow-x: hidden;
}

a {
  text-decoration: none;
  color: #000000;
}

.ellipses {
  max-width: calc(100vw - 176px);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.content {
  width: 100%;
  height: 100%;
  padding-left: $sidebar-width;
  font-size: 0;
}

.section-title {
  padding: 32px;
}

.section {
  margin-left: 72px;

  h1 {
    font-family: 'Quicksand', sans-serif;
    font-size: 32px;
  }

  h2 {
    font-family: 'Quicksand', sans-serif;
    font-size: 24px;
    margin: 0;
  }

  h6 {
    font-family: 'Quicksand', sans-serif;
    font-size: 14px;
  }

  p {
    font-family: 'Droid Sans', sans-serif;
    font-size: 16px;
    margin: 0;
  }
}

.center-vertical {
  position: absolute;
  top: 50%;

  -webkit-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  transform: translate(0, -50%);
}

// Sections

#designs {

  img {
    height: 400px;
  }

  p {
    margin-top: 32px;
    max-width: 400px;
  }

  .design {
    min-height: 100vh;
    position: relative;
  }

  .section-title {
    padding-left: 0;
  }

  .section {
    padding-bottom: 140px;
  }
}

#about {
  min-height: 100vh;
  position: relative;

  .section {
    max-width: 600px;
  }
}

#projects {
  min-height: 100vh;
  position: relative;

  hr {
    float: left;
    width: 600px;
    margin-left: 116px;
    margin-bottom: 16px;
  }

  .body {
    display: table-cell;
    vertical-align: top;
    padding-left: 16px;
    padding-right: 16px;
    width: 600px;

    h6 {
      color: #666;
      margin: 8px 0 0 0;
    }

    p {
      padding-top: 8px;
    }
  }

  .project {
    clear: both;
    display: table;
    margin-bottom: 16px;
  }

  .project-img {
    display: table-cell;
    width: 100px;
    height: 100px;
  }

  .link {
    clear: both;
    margin-top: 4px;

    p {
      margin-left: 32px;
    }
  }

  .link-img {
    width: 24px;
    float: left;
    margin-top: 4px;
  }

  .section {
    padding-bottom: 140px;
    padding-top: calc(#{$title-offset} - 40px);
  }
}

#work {
  min-height: 100vh;
  position: relative;

  span.position {
    font-style: italic;
    font-size: 20px;
  }

  hr {
    float: left;
    width: 700px;
    margin-bottom: 16px;
  }

  h6 {
    color: #666;
    margin: 8px 0 0 0;
  }

  .tasks {
    margin-top: 8px;

    li {
      margin-top: 4px;
      font-family: 'Droid Sans', sans-serif;
      font-size: 16px;
      padding-right: 16px;
    }
  }

  .work {
    clear: both;
    margin-bottom: 16px;
    max-width: 700px;
  }

  .section {
    padding-bottom: 140px;
    padding-top: calc(#{$title-offset} - 40px);
  }
}

#contact {
  min-height: 100vh;
  position: relative;
  width: 100%;

  .icons {
    width: calc(100% - #{$sidebar-width});
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  img {
    width: 128px;
    height: 128px;
    margin: 16px;
  }
}

.title {
  font-family: 'Quicksand', sans-serif;
  font-size: 32px;
  color: #ffffff;
  margin-left: 72px;
  margin-top: -$title-offset;
}

// Section dividers

.divider {
  padding: 0;
  margin: 0;
  height: 150px;
  width: 100%;

  &.bottom {
    position: absolute;
    margin-bottom: -2px;
    left: 0;
    bottom: 0;

    -webkit-transform: rotate(180deg);
    -ms-transform:rotate(180deg);
    transform: rotate(180deg);
  }
}

// Background colors

svg.gray {
  fill: #EBEBEB;
}

svg.blue {
  fill: #3FA9F5;
}

svg.orange {
  fill: #FBB03B;
}

svg.red {
  fill: #D4145A;
}

// Sidebar properties

.sidebar {
  position: fixed;
  width: $sidebar-width;
  height: 100%;
  font-size: 16pt;
  font-family: 'Quicksand', sans-serif;

  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  justify-content: center;

  ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  li {
    text-align: right;
    padding: 0;
    margin: 24px 0 0 0;
  }

  .sidebar-content {
    width: 170px;
  }

  .headshot {
    width: 170px;
    height: 170px;
  }

  .nav {
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .nav-list {
    float: left;
  }

  .nav-indicators {
    margin-left: 20px;
    float: left;

    li {
      position: relative;
    }
  }

  .indicator {
    position: relative;
    width: 16px;
    height: 16px;
    line-height: 16pt;
  }

  .indicator-filled {
    position: absolute;
    z-index: 2;
    left: 50%;
    top: 50%;

    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
  }
}

#about-indicator {
  width: 0;
  height: 0;
}

#projects-indicator {
  width: 0;
  height: 0;
}

#work-indicator {
  width: 0;
  height: 0;
}

#contact-indicator {
  width: 0;
  height: 0;
}

// Header

header {
  display: none;
}

.shadow {
  display: none;
}

// Mobile

@media screen and (max-width: 1080px) {
  header {
    display: block;
    position: fixed;
    width: 100%;
    height: $header-height;
    background-color: #fff;
    z-index: 999;

    .nav-profile-img {
      margin:4px 0 0 4px;
      float:left;
    }
  }

  .shadow {
    display: block;
    position: fixed;
    width: 100%;
    height: 4px;
    padding-top: 72px;
    background: #c0c0c0;
    z-index: 998;
  }

  .sidebar {
    display: none;
  }

  .content {
    padding-left: 0;
    padding-top: $header-height;
  }

  .divider {
    height: 100px;
  }

  .title {
    margin-top: calc(20px - #{$title-offset})
  }

  #about {
    min-height: calc(100vh - #{$header-height});
  }

  #contact {
    min-height: calc(100vh - #{$header-height});

    .icons {
      width: 100%;
      -webkit-flex-wrap: wrap;
      flex-wrap: wrap;
    }
    img {
      width: 64px;
      height: 64px;
      margin: 8px;
    }
  }
}

@media screen and (max-width: 800px) {
  .sidebar {
    display: none;
  }

  .content {
    padding-left: 0;
  }

  .title {
    margin-left: 18px;
    font-size: 28px;
  }

  .section {
    margin-left: 8px;
  }

  .section-title {
    padding-left: 0;
  }

  #about {
    h1 {
      font-size: 24px;
    }

    .section {
      margin-right: 8px;
    }
  }

  #projects {
    hr {
      width: calc(100% - 116px);
    }

    .no-image {
      display: none;
    }
  }

  #work {
    hr {
      width: 100%;
    }
  }
}

@media screen and (max-width: 400px) {
  #designs {
    img {
      height: auto;
      max-width: calc(100% - 8px);
    }
  }

  #contact {
    img {
      width: 48px;
      height: 48px;
      margin: 8px;
    }
  }

  #projects {
    .body {
      .description {
        display: none;
      }
    }
  }
}

